--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,13 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.6.0",
     "http-server": "^0.11.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
@@ -25,7 +25,10 @@
     "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
+    "@jimp/plugin-blit": "^0.22.12",
     "code-mirror-themes": "^1.0.0",
-    "idb": "^6.1.2"
+    "idb": "^6.1.2",
+    "pako": "^2.1.0",
+    "pngjs": "^7.0.0"
   }
 }
