--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@apideck/better-ajv-errors": "^0.3.6",
+    "@jimp/core": "^0.22.12",
+    "ajv": "^8.12.0",
+    "express": "^4.17.1",
+    "pngjs": "^7.0.0",
+    "workbox-build": "^7.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
